--- a/index.html
+++ b/index.html
@@ -2,6 +2,9 @@
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
+    <meta name="description" content="دار الحسام" />
+    <meta name="keywords" content="دار الحسام , دار حسام , daralhosam , dar alhosam , dar alhusam , daralhusam , daralhussam , dar alhussam" />
+
     <link rel="icon" type="image/svg+xml" href="/vite.svg" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>دار الحسام</title>
